custom scrollbar and fix overflow bug

--- a/beta/badge/static/badge/styles.css
+++ b/beta/badge/static/badge/styles.css
@@ -17,6 +17,7 @@ html {
   background-size: cover;
   font-size: 62.5%;
   filter: contrast(.8);
+  overflow-x: hidden;
   /* 14px = 10px  */
 }
 
@@ -229,6 +230,7 @@ Navigation
   -o-transition: all 0.6s ease-out;
   -ms-transition: all 0.6s ease-out;
   transition: all 0.6s ease-out;
+  margin: 1rem;
 }
 
 .navigation:hover .container{
@@ -401,10 +403,32 @@ html.is-leaving .transition-blur {
   flex-wrap: nowrap;
 }
 
+/* Scrollbar */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 @media (max-width: 992px) {
   .home-content {
     background-color: #00000061;
     padding: 2rem;
+    margin-top: 8rem;
   }
 
   .home-content h2 {
